--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -18,13 +20,17 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "request-promise-native": "^1.0.7",
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p client server",
+    "client": "react-scripts start",
+    "server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-prod": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +49,9 @@
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.2"
-  }
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "1.18.7",
+    "npm-run-all": "^4.1.5"
+  },
+  "proxy": "http://localhost:5002/"
 }
